# evalscope

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config_local.yaml  AGENTS.md  CONTRIBUTING.md  DESIGN.md  Handout_A.md  Handout_B.md  LICENSE  MANIFEST.in  Makefile  PRUNING_README.md  README.md  README_PRUNING.md  README_zh.md  agentic_dataset.json  design-qa.md  linter.sh  mixed_data.jsonl  pyproject.toml  requirements.txt  run.py  run_arena.py  run_caption_e2e.sh  run_ms.py  schema.json  setup.cfg  setup.py  test2.py  viz.py
.dev_scripts/: linter.sh
.github/: SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 1-issue-模版-中文版-.md  2-issue-template--english-version-.md  3-feature-request.md  eval-issue-template.md  feature_request.md  issue-template--english-version-.md  issue-template-中文版-.md
.github/workflows/: ci_test.yaml  ci_test_full.yaml  code-review.yaml  frontend.yml  lint.yml  publish.yaml
analysis/: aalcr_statistics.jsonl  build_aalcr_statistics.py  build_lcb_statistics.py  build_mmmu_statistics.py  inspect_evals.py  inspect_mmmu.py  lcb_statistics.jsonl  mmmu_statistics.jsonl  validate_pruned_signal.py
deploy/: docker-compose.yml
deploy/dockerfiles/: Dockerfile_eval  Dockerfile_vllm  eval-script.sh  start-vllm.sh
docker/: Dockerfile.ms-agent  dockerfile
docs/: download_images.py  generate_dataset_md.py  process_sync_doc.py  常见问题整理.md
docs/en/: .readthedocs.yaml  conf.py  index.md  index.rst
docs/scripts/: __init__.py  description.json  download_images.py  generate_dataset_md.py  process_sync_doc.py  translate_description.py
docs/zh/: .readthedocs.yaml  README_zh.md  conf.py  index.md  index.rst
evals/: __init__.py  api.py  constants.py  eval.py  evaluate.py  model.py  registry.py  report.py  task.py  version.py
evals/evaluator/: __init__.py  arena.py  auto_reviewer_gpt4.py  builder.py  classify.py  code_eval.py  elo_rating_eval.py  generation.py  match.py  math_eval.py  rating_eval.py
evals/metrics/: arena_metrics.py  code_metric.py  math_accuracy.py  metrics.py  rouge_metric.py
evals/predictors/: __init__.py  base.py  chatglm_predictor.py  glm_predictor.py  gpt_predictor.py  local_inference_predictor.py  model_adapter.py  moss_predictor.py  openai_gpt_predictor.py  qwen_predictor.py
evals/samples/: __init__.py  generate_samples.py
evals/scoring_models/: dummy.py  generation.py  include.py
evals/scoringmodels/: builder.py  classify.py  generation.py  includs.py  match.py  similarity.py  unit_test.py
evals/tasks/: __init__.py  base.py  evals.utils.utils  task.py  task_eval_arena_mode.py  task_eval_gpt35_completion.py  task_eval_qwen_code.py  task_eval_qwen_generation.py  task_eval_qwen_math.py  task_gen_model_answers.py  task_gen_reviews.py
evals/tools/: __init__.py
evals/utils/: arena_utils.py  completion_parsers.py  error.py  import_utils.py  logger.py  maxcompute_util.py  sql_utils.py  utils.py
evalscope/: __init__.py  arguments.py  cache.py  config.py  constants.py  run.py  run_arena.py  run_ms.py  summarizer.py  version.py
evalscope/agent/: __init__.py  runner.py  skills.py
evalscope/api/: __init__.py  registry.py
evalscope/app/: __init__.py  app.py  arguments.py  constants.py  ui_components.py
evalscope/arena/: arena.py  arena_utils.py  arguments.py  config_arena.py
evalscope/backend/: __init__.py  base.py
evalscope/benchmarks/: __init__.py  benchmark.py  data_adapter.py  filters.py  utils.py
evalscope/cli/: benchmark_info.py  cli.py  start_app.py  start_arena.py  start_eval.py  start_perf.py  start_server.py  start_service.py
evalscope/collections/: __init__.py  collection_schema.py  data_generator.py  data_sampler.py  evaluator.py  evaluators.py  run.py  sampler.py  schema.py
evalscope/evaluator/: __init__.py  batch_reviewer.py  (+4 more)
examples/: example_custom_vqa.py  example_deepseek_distill_collection.py  example_eval_clip_benchmark.py  example_eval_custom_llm_data.py  example_eval_mteb.py  example_eval_perf.py  example_eval_rag.py  example_eval_swift_openai_api.py  example_eval_toolbench.py  example_eval_vlm_local.py  example_eval_vlm_swift.py  example_qwen3_collection.py  example_rewrite_eval_results.py  example_swift_eval.py  example_swift_qwen_vl.py  example_swift_vlm.py  llm_evals_rank.csv  run_gen_poetry_task.py  run_inner_itag_pipeline.py  run_internal_itag_pipeline.py  run_task_gen_poetry.py  run_task_moss_exam.py  run_task_qwen_exam.py  run_task_qwen_gen_poetry.py
llmuses/: __init__.py  cache.py  config.py  constants.py  evaluate.py  model.py  registry.py  run.py  run_arena.py  run_ms.py  summarizer.py  task.py  version.py
notebooks/: Llama-2-7b-eval.ipynb  analyzing_battle.ipynb  chatglm2-6b-eval.ipynb  colab_arena_evaluation.ipynb
requirements/: agent.txt  agents.txt  aigc.txt  app.txt  dev.txt  docs.txt  framework.txt  inner.txt  mcp.txt  opencompass.txt  perf.txt  rag.txt  requirements.txt  requirements_inner.txt  sandbox.txt  service.txt  vlmeval.txt
resources/: experiments.md
scripts/: app.py  dump_inputs.py  eval.sh  run.py  run_arena.py  run_arena_base.py  run_codex_qwen.py  run_elo_eval.py  run_eval.py  run_internal_itag_pipeline.py  run_ms.py  run_qa_browser.py  run_swebenchpro_codex_qwen.py  run_swebenchpro_qwen_cc.py  run_task_qwen_exam.py  run_task_qwen_gen_poetry.py  vllm_server.sh
tasks/: eval_qwen-7b-chat_v100.yaml
tests/: common.py  test_async_generate.py  test_function_utils.py  test_loader_shuffle.py  test_logger.py  test_openai_responses.py  test_run_all.py  test_vlmeval.py  utils.py
tools/: compare_runs.py
(+2841 files in other folders)
